# KDiskMark

./: .gitignore  .travis.yml  CMakeLists.txt  KDiskMark.pro  KDiskMark_de_DE.ts  KDiskMark_ru_RU.ts  README.md  about.cpp  about.h  about.ui  benchmark.cpp  benchmark.h  crowdin.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  snapcraft.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
data/: dev.jonmagon.kdiskmark.applicationinterface.conf  dev.jonmagon.kdiskmark.helper.actions  dev.jonmagon.kdiskmark.helper.policy  dev.jonmagon.kdiskmark.helperinterface.conf  dev.jonmagon.kdiskmark.helperinterface.service.in  io.github.jonmagon.kdiskmark.metainfo.xml  kdiskmark.actions  kdiskmark.desktop
data/icons/: app.qrc
data/icons/flags/: flags.qrc
data/translations/: KDiskMark_de_DE.ts  KDiskMark_ru_RU.ts  kdiskmark.ts  kdiskmark_cs_CZ.ts  kdiskmark_de_DE.ts  kdiskmark_es_ES.ts  kdiskmark_es_MX.ts  kdiskmark_fi_FI.ts  kdiskmark_fr_FR.ts  kdiskmark_hi_IN.ts  kdiskmark_hu.ts  kdiskmark_hu_HU.ts  kdiskmark_it_IT.ts  kdiskmark_ja_JP.ts  kdiskmark_ko_KR.ts  kdiskmark_nl_NL.ts  kdiskmark_pl_PL.ts  kdiskmark_pt_BR.ts  kdiskmark_ru_RU.ts  kdiskmark_sk_SK.ts  kdiskmark_sv_SE.ts  kdiskmark_tr_TR.ts  kdiskmark_uk_UA.ts  kdiskmark_zh_CN.ts  kdiskmark_zh_TW.ts
snap/: snapcraft.yaml
src/: about.cpp  about.h  about.ui  appsettings.cpp  appsettings.h  benchmark.cpp  benchmark.h  cmake.h.in  diskdriveinfo.cpp  diskdriveinfo.h  global.cpp  global.h  helper.cpp  helper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plots.cpp  plots.h  plots.ui  settings.cpp  settings.h  settings.ui  storageitemdelegate.cpp  storageitemdelegate.h  styletweaks.cpp  styletweaks.h
